# notouchscreen

./: .gitignore  README.md  README_zh-CN.md  switcher.cpp  tray.py
driver_daemon/: CMakeLists.txt  DriverServiceAdaptor.h  DriverServiceProxy.h  driver_daemon.cpp  driver_daemon.service
driver_daemon/dbus/: top.goosople.notouchscreen.DriverService.xml  top.goosople.notouchscreen.conf
